# fitbod-test

./: .gitignore  Cargo.toml  README.md  justfile  stress-test-coolidge-stdout.txt
src/: main.rs
templates/: api-request.tera
var/: example-users.csv
