[package]
name = "fitbod-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
csv = "1"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.5", features = ["serde"] }
base64 = "0.13"
fitbod = { path = "../fitbod" }
itertools = "0.10"
rand = "0.8"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
