[package]
name = "fitbod-test"
version = "0.1.0"
edition = "2018"
authors = ["Jonathan Strong <jonathan.strong@gmail.com>"]

[dependencies]
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
csv = "1"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.5", features = ["serde"] }
base64 = "0.13"
fitbod = { path = "../fitbod" }
itertools = "0.10"
rand = "0.8"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tera = "1"
hashbrown = "0.11"
thhp = "0.2"
pretty_toa = "1"
rayon = "1.5"
num_cpus = "1.3"
crossbeam-channel = "0.5"
signal-hook = "0.1"
influx-writer = { git = "https://github.com/jonathanstrong/influx-writer" }
